--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,8 +3,23 @@ name: default
 on: [push, pull_request]
 
 jobs:
-  base:
-    name: base
+  lint:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up go 1.11.4
+        uses: actions/setup-go@v2
+        with:
+          go-version: "1.11.4"
+      - name: fmt
+        run: test -z $(gofmt -l .)
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.29
+  test:
+    name: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -13,13 +28,5 @@ jobs:
         with:
           go-version: "1.11.4"
 
-      - name: fmt
-        run: test -z $(gofmt -l .)
-
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: v1.29
-
-      - name: test
+      - name: unit tests
         run: make test
