--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -8,25 +8,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up go 1.11.4
-        uses: actions/setup-go@v2
+      - uses: actions/setup-go@v2
         with:
-          go-version: "1.11.4"
-      - name: fmt
-        run: test -z $(gofmt -l .)
+          go-version: "1.13"
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
           version: v1.29
+          args: --tests=false --enable=gofmt
   test:
     name: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up go 1.11.4
-        uses: actions/setup-go@v2
+      - uses: actions/setup-go@v2
         with:
-          go-version: "1.11.4"
+          go-version: "1.13"
 
       - name: unit tests
         run: make test
