Hardcode accountID for tests
Use Revizor API to create test containers to run acceptance tests against
SCALRCORE-16917

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -46,11 +46,10 @@ jobs:
       - name: Run acceptance tests
         env:
           SCALR_HOSTNAME: ${{ steps.create.outputs.hostname }}
-        run: |
-          printenv
+        run: make acc-tests
       - name: Delete container
         id: delete
-        if: ${{ always() }}
+        if: ${{ steps.create.outputs.container_id }}
         uses: Scalr/gh-action-revizor@feature/SCALRCORE-16917
         with:
           command: delete
