--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -38,6 +38,17 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: "1.13"
+      - name: Environment settings
+        env:
+          API_BRANCH: ${{ contains(github.event.head_commit.message, '[API_BRANCH]') }}
+          DB_BRANCH: ${{ contains(github.event.head_commit.message, '[DB_BRANCH]') }}
+        run: |
+          echo "API_BRANCH=${API_BRANCH}" >> $GITHUB_ENV
+          echo "Set env variable from commit message: API_BRANCH=${API_BRANCH}"
+          echo "DB_BRANCH=${DB_BRANCH}" >> $GITHUB_ENV
+          echo "Set env variable from commit message: DB_BRANCH=${DB_BRANCH}"
+          echo BRANCH=${GITHUB_REF#refs/heads/} >> $GITHUB_ENV
+          echo "Set env variable: BRANCH=${GITHUB_REF#refs/heads/}"
       - name: Create container
         id: create
         uses: Scalr/gh-action-revizor@feature/SCALRCORE-16917
@@ -46,7 +57,7 @@ jobs:
       - name: Run acceptance tests
         env:
           SCALR_HOSTNAME: ${{ steps.create.outputs.hostname }}
-        run: make acc-tests
+        run: make testacc
       - name: Delete container
         id: delete
         if: ${{ steps.create.outputs.container_id }}
