--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -60,7 +60,7 @@ jobs:
         run: make testacc
       - name: Delete container
         id: delete
-        if: ${{ steps.create.outputs.container_id }}
+        if: ${{ always() && steps.create.outputs.container_id }}
         uses: Scalr/gh-action-revizor@feature/SCALRCORE-16917
         with:
           command: delete
