--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,8 +3,10 @@ before:
     - go mod download
 builds:
 - env:
-  - CGO_ENABLED=0
+    - CGO_ENABLED=0
+    - VERSION={{ if .Branch == "develop" }} {{ .Version }} {{ else }} {{ .Branch }} {{ end }}
   binary: '{{ .ProjectName }}_v{{ .Version }}'
+  ldflags: -X github.com/scalr/terraform-provider-scalr/version.ProviderVersion={{ .Env.VERSION }}
 
 changelog:
   skip: true
