SCALRCORE-18524 > Update goreleaser

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,8 +5,9 @@ builds:
 - env:
     - CGO_ENABLED=0
     - VERSION={{ if .Branch == "develop" }} {{ .Version }} {{ else }} {{ .Branch }} {{ end }}
+  ldflags:
+    - -s -w -X github.com/scalr/terraform-provider-scalr/version.ProviderVersion={{ .Env.VERSION }}
   binary: '{{ .ProjectName }}_v{{ .Version }}'
-  ldflags: -X github.com/scalr/terraform-provider-scalr/version.ProviderVersion={{ .Env.VERSION }}
 
 changelog:
   skip: true
