SCALRCORE-18524 > Update goreleaser

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,7 +6,7 @@ builds:
     - CGO_ENABLED=0
     - VERSION={{ if .Branch == "develop" }} {{ .Version }} {{ else }} {{ .Branch }} {{ end }}
   ldflags:
-    - -s -w -X github.com/scalr/terraform-provider-scalr/version.ProviderVersion={{ .Env.VERSION }}
+    - -s -w -X "github.com/scalr/terraform-provider-scalr/version.ProviderVersion={{ .Env.VERSION }}"
   binary: '{{ .ProjectName }}_v{{ .Version }}'
 
 changelog:
