--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,9 +3,10 @@ before:
     - go mod download
 builds:
 - env:
-    CGO_ENABLED: 0
-    VERSION: '{{ if .Branch == "develop" }} {{ .Version }} {{ else }} {{ .Branch }} {{ end }}'
-  ldflags: '-s -w -X "github.com/scalr/terraform-provider-scalr/version.ProviderVersion={{ .Env.VERSION }}"'
+    - CGO_ENABLED=0
+  ldflags:
+    - '-X github.com/scalr/terraform-provider-scalr/version.ProviderVersion={{ .Version }}'
+    - '-X github.com/scalr/terraform-provider-scalr/version.Branch={{ .Branch }}'
   binary: '{{ .ProjectName }}_v{{ .Version }}'
 
 changelog:
