--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,11 +8,46 @@ builds:
     - '-X github.com/scalr/terraform-provider-scalr/version.ProviderVersion={{ .Version }}'
     - '-X github.com/scalr/terraform-provider-scalr/version.Branch={{ .Branch }}'
   binary: '{{ .ProjectName }}_v{{ .Version }}'
+  goos:
+    - freebsd
+    - windows
+    - linux
+    - darwin
+  goarch:
+    - amd64
+    - '386'
+    - arm
+    - arm64
+  ignore:
+    - goos: darwin
+      goarch: '386'
+
+archives:
+- format: zip
+  name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
 
 changelog:
   skip: true
 
 checksum:
-  name_template: 'checksums.txt'
+  name_template: '{{ .ProjectName }}_{{ .Version }}_SHA256SUMS'
+  algorithm: sha256
+
+signs:
+  - artifacts: checksum
+    args:
+      # if you are using this in a GitHub action or some other automated pipeline, you 
+      # need to pass the batch flag to indicate its not interactive.
+      - "--batch"
+      - "--local-user"
+      - "{{ .Env.GPG_FINGERPRINT }}" # set this environment variable for your signing key
+      - "--output"
+      - "${signature}"
+      - "--detach-sign"
+      - "${artifact}"
+
+release:
+  draft: true
+
 snapshot:
   name_template: "devel"
