SCALRCORE-19877 IaCP Provider > VCS providers > Scalr VCS provider resource
[API_BRANCH]
[DB_BRANCH]

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Run acceptance tests
         env:
           SCALR_HOSTNAME: ${{ steps.create.outputs.hostname }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: make testacc
       - name: Install goveralls
         env:
