--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -33,6 +33,8 @@ jobs:
       REVIZOR_URL: ${{ secrets.REVIZOR_URL }}
       REVIZOR_TOKEN: ${{ secrets.REVIZOR_TOKEN }}
       SCALR_TOKEN: ${{ secrets.SCALR_TOKEN }}
+    permissions:
+      repository-projects: read
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
