--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -25,6 +25,8 @@ jobs:
       SCALR_TOKEN: ${{ secrets.SCALR_TOKEN }}
       API_BRANCH: ${{ github.event.inputs.api-branch }}
       DB_BRANCH: ${{ github.event.inputs.db-branch }}
+    permissions:
+      repository-projects: write
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
@@ -38,6 +40,7 @@ jobs:
       - name: Run acceptance tests
         env:
           SCALR_HOSTNAME: ${{ steps.create.outputs.hostname }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: make testacc
       - name: Delete container
         id: delete
