--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -35,6 +35,7 @@ jobs:
       SCALR_TOKEN: ${{ secrets.SCALR_TOKEN }}
     permissions:
       repository-projects: read
+      repository-hooks: write
       statuses: write
     steps:
       - uses: actions/checkout@v2
