rc28 > increase linter timeout

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -15,6 +15,7 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: v1.45.2
+          args: --timeout 2m
   unit-tests:
     name: unit-tests
     runs-on: ubuntu-latest
