--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -84,13 +84,18 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.DEV_GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.DEV_GCP_SA_KEY }}
           export_default_credentials: true
       - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Create dev-tag
+        run: |
+          LAST_TAG=$(git describe --tags --abbrev=0)
+          BRANCH=$(git rev-parse --abbrev-ref HEAD | sed 's|\(.*\)|\L\1|g;s|/|-|g')
+          git tag $LAST_TAG-$BRANCH
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
@@ -98,15 +103,14 @@ jobs:
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
-          version: latest
-          args: release --rm-dist
+          version: v1.8.3
+          args: release --skip-publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
       - name: Upload provider to registry
         env:
-          DOMAIN: registry.scalr.dev
-          BUCKET_NAME: gs://tf-registry-48e84b05eab87d56
+          DOMAIN: ${{ secrets.DEV_DOMAIN }}
+          BUCKET_NAME: ${{ secrets.DEV_BUCKET_NAME }}
           GPG_KEY_ID: ${{ steps.import_gpg.outputs.fingerprint }}
           GPG_PUB_KEY: ${{ steps.import_gpg.outputs.pubkey }}
         run: bash scripts/upload.sh
