--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -115,7 +115,7 @@ jobs:
         run: bash scripts/upload.sh
   release:
     name: release
-    if: startsWith(github.ref, 'refs/tags/v1.0.0-rc') && github.event.base_ref == 'refs/heads/develop'
+    if: startsWith(github.ref, 'refs/tags/v1.0.0-rc')
     needs: [lint, unit-tests, acc-tests]
     runs-on: ubuntu-latest
     steps:
