--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -115,10 +115,14 @@ jobs:
         run: bash scripts/upload.sh
   release:
     name: release
-    if: startsWith(github.ref, 'refs/tags/v1.0.0-rc')
+    if: startsWith(github.ref, 'refs/tags/')
     needs: [lint, unit-tests, acc-tests]
     runs-on: ubuntu-latest
     steps:
+      - name: Validate tag
+        uses: rubenesp87/semver-validation-action@0.0.6
+        with:
+          version: ${{ github.event.release.tag_name }}
       - name: Import GPG key
         id: import_gpg
         uses: Scalr/ghaction-import-gpg@v2.1.1
