--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -25,6 +25,7 @@ jobs:
       SCALR_TOKEN: ${{ secrets.SCALR_TOKEN }}
       API_BRANCH: ${{ github.event.inputs.api-branch }}
       DB_BRANCH: ${{ github.event.inputs.db-branch }}
+      UPSTREAM_ID: ${{ github.run_number }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
