SCALRCORE-23801 Provider > Policy group datasource has been broken

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -35,17 +35,7 @@ jobs:
       REVIZOR_TOKEN: ${{ secrets.REVIZOR_TOKEN }}
       SCALR_TOKEN: ${{ secrets.SCALR_TOKEN }}
       UPSTREAM_ID: ${{ github.run_number }}
-    permissions:
-      actions: read
-      checks: read
-      contents: read
-      deployments: read
-      issues: read
-      packages: read
-      pull-requests: read
-      repository-projects: read
-      security-events: read
-      statuses: read
+      ORG_ADMIN_TOKEN: ${{ secrets.ORG_ADMIN_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
