SCALRCORE-17414 Temporary CI fix

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -35,6 +35,7 @@ jobs:
       REVIZOR_TOKEN: ${{ secrets.REVIZOR_TOKEN }}
       SCALR_TOKEN: ${{ secrets.SCALR_TOKEN }}
       UPSTREAM_ID: ${{ github.run_number }}
+      PY_REQ: "yes"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
