--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -86,6 +86,7 @@ jobs:
         id: create
         shell: bash
         run: |
+          echo "::group::Create test app"
           if [ -z ${{ env.API_BRANCH }} ] || [ -z ${{ env.DB_BRANCH }} ]; then
               BRANCHES=""
           else
@@ -101,6 +102,7 @@ jobs:
           fatmouse/python-builder:master python -u clickfile.py te up ${BRANCHES} \
           --run-url ${{ steps.get-job-id.outputs.html_url }} \
           --dedicated ${{ env.RUN_TAG }}
+          echo "::endgroup::"
       - name: Get Scalr hostname
         shell: bash
         run: |
@@ -132,6 +134,7 @@ jobs:
         if: ${{ always() }}
         shell: bash
         run: |
+          echo "::group::Delete test app"
           docker run --rm \
           -w /fatmouse \
           -v $PWD/fatmouse:/fatmouse \
@@ -139,6 +142,7 @@ jobs:
           fatmouse/python-builder:master \
           python -u clickfile.py te rm \
           --no-wait ${{ env.RUN_TAG }}
+          echo "::endgroup::"
   upload-dev:
     name: upload-dev
     needs: [lint, unit-tests, acc-tests]
