SCALRCORE-247291: Don't pass fatmouse/scalr master branch during TEv2 container request

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -88,11 +88,18 @@ jobs:
         id: create
         shell: bash
         run: |
-          if [ -z ${{ env.API_BRANCH }} ] || [ -z ${{ env.DB_BRANCH }} ]; then
-            BRANCHES=""
+          if [ -z ${{ env.API_BRANCH }} ]; then
+            FATMOUSE_BRANCH=""
           else
-            BRANCHES="--fatmouse-branch ${{ env.API_BRANCH }} --scalr-branch ${{ env.DB_BRANCH }}"
+            FATMOUSE_BRANCH="--fatmouse-branch ${{ env.API_BRANCH }}"
           fi
+          
+          if [ -z ${{ env.DB_BRANCH }} ]; then
+            SCALR_BRANCH=""
+          else
+            SCALR_BRANCH="--scalr-branch ${{ env.DB_BRANCH }}"
+          fi
+
           docker run --rm \
           -e GITHUB_WORKSPACE=true \
           -e GITHUB_OUTPUT=/fatmouse/output \
@@ -100,7 +107,8 @@ jobs:
           -v $PWD/fatmouse:/fatmouse \
           -v $GITHUB_OUTPUT:/fatmouse/output \
           -v ~/.scalr-labs:/etc/scalr-labs \
-          fatmouse/python-builder:master python -u clickfile.py te up ${BRANCHES} \
+          fatmouse/python-builder:master python -u clickfile.py te up \
+          ${FATMOUSE_BRANCH} ${SCALR_BRANCH} \
           --run-url ${{ steps.get-job-id.outputs.html_url }} \
           --cpu=1 \
           --ram=2G \
