SCALRCORE-24729: Add --scalr-server-image-tag param for TEv2 container request

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -99,8 +99,8 @@ jobs:
           else
             SCALR_BRANCH="--scalr-branch ${{ env.DB_BRANCH }}"
           fi
-          
-          if [ ${{ env.API_BRANCH }} = "staging" ]; then
+
+          if [ "${{ env.API_BRANCH }}" = "staging" ]; then
             IMAGE="--scalr-server-image-tag staging"
           else
             IMAGE=""
