--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -116,6 +116,7 @@ jobs:
           fatmouse/python-builder:master python -u clickfile.py te up \
           ${FATMOUSE_BRANCH} ${SCALR_BRANCH} ${IMAGE} \
           --run-url ${{ steps.get-job-id.outputs.html_url }} \
+          --skip-ui-build \
           --cpu=1 \
           --ram=2G \
           ${{ env.RUN_TAG }}
