added ignore paths

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,6 +1,12 @@
 name: default
 
-on: push
+on:
+  push:
+    paths-ignore:
+      - docs/**
+      - CHANGELOG.md
+      - CONTRIBUTING.md
+      - README.md
 
 jobs:
   lint:
