--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -3,24 +3,23 @@ name: upstream
 on:
   workflow_dispatch:
     inputs:
-      upstream-sha:
+      upstream_sha:
         description: "Upstream commit SHA"
         required: true
-      api-branch:
+      api_branch:
         description: "API Branch"
         required: true
         default: "master"
-      db-branch:
-        description: "DB Branch"
-        required: false
-        default: "master"
-      py-req:
+      py_req:
         description: "Whether to upgrade python requirements"
         required: false
         default: "no"
-      upstream-base-ref:
+      upstream_base_ref:
         description: "Upstream base branch (e.g. 'master' or 'release/8.57.0')"
         required: false
+      pr_id:
+        description: The number of the pull request
+        required: true
 
 jobs:
   acc-tests:
@@ -29,13 +28,14 @@ jobs:
     env:
       ORG_ADMIN_TOKEN: ${{ secrets.ORG_ADMIN_TOKEN }}
       SCALR_TOKEN: ${{ secrets.SCALR_TOKEN }}
-      API_BRANCH: ${{ github.event.inputs.api-branch }}
-      DB_BRANCH: ${{ github.event.inputs.db-branch }}
-      PY_REQ: ${{ github.event.inputs.py-req }}
+      API_BRANCH: ${{ github.event.inputs.api_branch }}
+      PY_REQ: ${{ github.event.inputs.py_req }}
       UPSTREAM_ID: ${{ github.run_number }}
-      UPSTREAM_BASE_REF: ${{ github.event.inputs.upstream-base-ref }}
+      UPSTREAM_BASE_REF: ${{ github.event.inputs.upstream_base_ref }}
     steps:
       - uses: actions/checkout@v3
+      - name: Notify upstream about pending
+        run: make notify-upstream upstream_sha=${{ github.event.inputs.upstream_sha }} state=pending run_id=${{ github.run_id }}
       - uses: actions/setup-go@v3
         with:
           go-version: "1.18"
@@ -46,6 +46,18 @@ jobs:
           path: fatmouse
           ref: ${{ env.API_BRANCH }}
           token: ${{ secrets.GH_PAT }}
+      - name: Get pr labels
+        id: pr-labels
+        if: ${{ inputs.pr_id != '' }}
+        uses: ./fatmouse/.github/actions/pr-labels
+        with:
+          github_token: ${{ secrets.GH_PAT }}
+          owner: Scalr
+          repo: fatmouse
+          pr_id: ${{ inputs.pr_id }}
+      - name: Set py-req on PR with label
+        if: ${{ inputs.pr_id != '' && contains(steps.pr-labels.outputs.labels, ' py-req ') }}
+        run: echo "PY_REQ=yes" >> $GITHUB_ENV
       - id: auth
         uses: google-github-actions/auth@v0
         with:
@@ -94,12 +106,6 @@ jobs:
             FATMOUSE_BRANCH="--fatmouse-branch ${{ env.API_BRANCH }}"
           fi
 
-          if [ ${{ env.DB_BRANCH }} = "master" ]; then
-            SCALR_BRANCH=""
-          else
-            SCALR_BRANCH="--scalr-branch ${{ env.DB_BRANCH }}"
-          fi
-          
           TEV2_BRANCH=${{ env.API_BRANCH }}
           NORMALIZED_BRANCH=$(echo $TEV2_BRANCH | tr / - | tr '[:upper:]' '[:lower:]')
           if docker manifest inspect eu.gcr.io/development-156220/fatmouse/scalr-server-te:${NORMALIZED_BRANCH} ; then
@@ -122,7 +128,7 @@ jobs:
           -v $GITHUB_OUTPUT:/fatmouse/output \
           -v ~/.scalr-labs:/etc/scalr-labs \
           fatmouse/python-builder:master python -u clickfile.py te up \
-          ${FATMOUSE_BRANCH} ${SCALR_BRANCH} ${IMAGE} \
+          ${FATMOUSE_BRANCH} ${IMAGE} \
           --run-url ${{ steps.get-job-id.outputs.html_url }} \
           --skip-ui-build \
           --cpu=1 \
@@ -160,7 +166,7 @@ jobs:
           --no-wait ${{ env.RUN_TAG }}
       - name: Notify upstream about success
         if: ${{ success() }}
-        run: make notify-upstream upstream_sha=${{ github.event.inputs.upstream-sha }} state=success run_id=${{ github.run_id }}
+        run: make notify-upstream upstream_sha=${{ github.event.inputs.upstream_sha }} state=success run_id=${{ github.run_id }}
       - name: Notify upstream about failure
         if: ${{ failure() }}
-        run: make notify-upstream upstream_sha=${{ github.event.inputs.upstream-sha }} state=failure run_id=${{ github.run_id }}
+        run: make notify-upstream upstream_sha=${{ github.event.inputs.upstream_sha }} state=failure run_id=${{ github.run_id }}
