SCALRCORE-26073: Run provider tests in fatmouse only when PR moved to review/received all approves

--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -10,6 +10,10 @@ on:
         description: "API Branch"
         required: true
         default: "master"
+      db-branch:
+        description: "Not used, left for backward compatibility"
+        required: false
+        default: "master"
       py-req:
         description: "Whether to upgrade python requirements"
         required: false
